# data_structure_algorithm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/algorithms/: README.md
src/algorithms/Analysis_of_algorithms/: README.md
src/algorithms/Backtracking/: README.MD  backtracking.cpp
src/algorithms/Branch_and_bound/: README.MD  branch_and_bound.cpp  dijkstra.cpp
src/algorithms/Divide_and_conquer/: README.md  strassen_matrix_multiplication.cpp
src/algorithms/Dynamic_programming/: README.MD  dynamic_programming.cpp
src/algorithms/Greedy_method/: README.md  greedy_methods.cpp
src/algorithms/NP-Hard_and_NP-Complete/: README.MD  main.cpp
src/algorithms/src/Analysis_of_algorithms/: README.md
src/algorithms/src/Backtracking/: README.MD  backtracking.cpp
src/algorithms/src/Backtracking_Brute_Force_Approach/: README.MD
src/algorithms/src/Branch_and_bound/: README.MD
src/algorithms/src/Dynamic_programming/: README.MD  dynamic_programming.cpp
src/algorithms/src/Greedy_method/: README.md  greedy_methods.cpp
src/algorithms/src/Shortest_Path_Algorithms_Dijkstra_and_Bellman-Ford/: dijkstra.cpp
src/array/: README.md  main.cpp
src/graphs/: README.md  articulation_point.cpp  articulation_point_bridge.cpp  bellman_ford.cpp  bellman_ford.cpp.autosave  floyd_warshall.cpp  graph_bfs_dfs_search.cpp  graph_representation.cpp  hamiltonian_path.cpp  main.cpp  matrix.hpp  spanning_tree.cpp
src/hashing/: README.md  hash_chaining.cpp  hashing_main.cpp
src/heap/: README.md  heap.cpp
src/linked_list/: README.md  main.cpp
src/matrices/: README.md  matrices.cpp
src/practice/: CMakeLists.txt
src/practice/src/: main.cpp
src/practice/src/geeksforgeeks/: CMakeLists.txt
src/practice/src/geeksforgeeks/src/array/: main.cpp
src/practice/src/geeksforgeeks/src/hash/: main.cpp
src/practice/src/geeksforgeeks/src/stack/: main.cpp
src/practice/src/hackerrank/: CMakeLists.txt
src/practice/src/hackerrank/src/: abbreviation.cpp  accessing_inherited_functions.cpp  attending_workshops.cpp  balanced_brackets.cpp  binary_search_tree_lowest_common_ancestor.cpp  class_template_specialization.cpp  cpp_exception_handling.cpp  deque_STL.cpp  exceptional_server.cpp  height_of_a_binary_tree.cpp  hotel_prices.cpp  inherited_code.cpp  messages_order.cpp  new_year_chaos.cpp  overloading.cpp  overloading_ostream_operator.cpp  parser.cpp  template_specialization.cpp  virtual_functions.cpp
src/practice/src/interviews/IDA/src/: first.cpp  second.cpp  third.cpp
src/practice/src/interviews/KPIT/src/: KPIT_Question.pp  KPIT_my_answer.cpp
src/practice/src/interviews/MVTech/src/: MVTech_bug.cpp
src/practice/src/leetcode/: CMakeLists.txt
src/practice/src/leetcode/src/: array_string.cpp  dynamic_programming.cpp  hash.cpp  heap.cpp  linked_list.cpp  sliding_window.cpp
src/queue/: README.md  main.cpp
src/recursion/: README.md  main.cpp  recursion_into_iterative.cpp
src/sort_algorithms/: README.md  sort_algorithms.cpp
src/theory_of_computation/pushdown_automata/: README.md
src/theory_of_computation/regular_languages_and_finite_automata/: README.md
src/theory_of_computation/turing_machine/: README.md
src/trees/: B_B+_tree.cpp  README.md  avl_tree.cpp  binary_search_tree.cpp  dfs_bfs.cpp  main.cpp  print_binary_tree.cpp  red_black_tree.cpp  tree_creation.cpp  tree_representation.cpp
