ADD_EXECUTABLE(attending_workshops src/attending_workshops.cpp)
TARGET_LINK_LIBRARIES(attending_workshops)


ADD_EXECUTABLE(exceptional_server  src/exceptional_server.cpp)
TARGET_LINK_LIBRARIES(exceptional_server)

ADD_EXECUTABLE(class_template_specialization  src/class_template_specialization.cpp)
TARGET_LINK_LIBRARIES(class_template_specialization)

ADD_EXECUTABLE(parser  src/parser.cpp)
TARGET_LINK_LIBRARIES(parser)

ADD_EXECUTABLE(cpp_exception_handling  src/cpp_exception_handling.cpp)
TARGET_LINK_LIBRARIES( cpp_exception_handling)

ADD_EXECUTABLE(hotel_prices  src/hotel_prices.cpp)
TARGET_LINK_LIBRARIES(hotel_prices)

ADD_EXECUTABLE(accessing_inherited_functions  src/accessing_inherited_functions.cpp)
TARGET_LINK_LIBRARIES(accessing_inherited_functions)

ADD_EXECUTABLE(abbreviation  src/abbreviation.cpp)
TARGET_LINK_LIBRARIES(abbreviation)



ADD_EXECUTABLE(height_of_a_binary_tree  src/height_of_a_binary_tree.cpp)
TARGET_LINK_LIBRARIES(height_of_a_binary_tree)


ADD_EXECUTABLE(binary_search_tree_lowest_common_ancestor src/binary_search_tree_lowest_common_ancestor.cpp)
TARGET_LINK_LIBRARIES(binary_search_tree_lowest_common_ancestor)


ADD_EXECUTABLE(balanced_brackets src/balanced_brackets.cpp)
TARGET_LINK_LIBRARIES(balanced_brackets)


ADD_EXECUTABLE(template_specialization src/template_specialization.cpp)
TARGET_LINK_LIBRARIES(template_specialization)

ADD_EXECUTABLE(virtual_functions src/virtual_functions.cpp)
TARGET_LINK_LIBRARIES(virtual_functions)

ADD_EXECUTABLE(inherited_code src/inherited_code.cpp)
TARGET_LINK_LIBRARIES(inherited_code)


ADD_EXECUTABLE(new_year_chaos src/new_year_chaos.cpp)
TARGET_LINK_LIBRARIES(new_year_chaos)


ADD_EXECUTABLE(deque_STL src/deque_STL.cpp)
TARGET_LINK_LIBRARIES(deque_STL)

ADD_EXECUTABLE(overloading src/overloading.cpp)
TARGET_LINK_LIBRARIES(overloading)

ADD_EXECUTABLE(overloading_ostream_operator src/overloading_ostream_operator.cpp)
TARGET_LINK_LIBRARIES(overloading_ostream_operator)


ADD_EXECUTABLE(messages_order src/messages_order.cpp)
TARGET_LINK_LIBRARIES(messages_order)


